# acd_stats

./: .gitignore  AerobaticCompetitionGrades.key  README.md
aerobatDB/: DESCRIPTION  NAMESPACE  README.md
aerobatDB/R/: contests.R  flightProgram.R  retrieveData.R
aerobatDB/data/: IAC_flight_9014.Rd  IAC_flight_9014.rda
aerobatDB/tests/: testthat.R
aerobatDB/tests/testthat/: testContests.R  testFlightProgram.R  testRetrieveData.R
aerobatStats/: DESCRIPTION  counts.rds  pc_data.rds  pc_errors.rds  pc_processed.rds
aerobatStats/R/: aerobatStats-internal.R  catchToList.R  flightJudgeRanks.R  flightProgram.R  gradesByJudge.R  judgeGradeChiSq.R  judgeGradeCounts.R  judgeGradeDistribution.R  judgeGradeSW.R  judgeGradeUnique.R  main.R  plotGOF.R  processContests.R  processOneContest.R  processOneFlight.R
aerobatStats/data/: IAC_JGF_Normal.Rd  IAC_JGF_Normal.rda  contest_selection.Rd  contest_selection.rda  grades_IAC_flight_10780.Rd  grades_IAC_flight_10780.rda  one_contest.Rd  one_contest.rda
aerobatStats/man/: aerobatStats-package.Rd
aerobatStats/tests/: tempPCErrors.rds  testthat.R
aerobatStats/tests/testthat/: testContests.R  testFlightJudgeRanks.R  testFlightProgram.R  testGradesByJudge.R  testJudgeGradeChiSq.R  testJudgeGradeCounts.R  testJudgeGradeDistribution.R  testJudgeGradeSW.R  testJudgeGradeUnique.R  testProcessContests.R  testProcessOneContest.R  testProcessOneFlight.R  testRetrieveData.R
aerobatStats/tests/testthat/test_data/: flight_9014.json
cdb/: DESCRIPTION  doc.txt
cdb/R/: flightProgram.R
cdb/tests/: testthat.R
cdb/tests/testthat/: testFlightProgram.R
jgdfit/: .gitignore  README.md  cluster.tex  conclusions.tex  grading.tex  main.tex  measurements.tex  references.bib  results.tex  results_all.tex  results_fps.tex  shapiro.tex  texit.sh
power/: DESCRIPTION  LICENSE  LICENSE.md  README.md  main.tex
power/tests/: testthat.R
power/tests/testthat/: test-smoke_test.R
prechi/: .Rbuildignore  .gitignore  AUTHORS  COPYING  DESCRIPTION  NAMESPACE  README.md  configure  configure.ac  run_test.sh
prechi/R/: preChi.R
prechi/man/: prechi.cluster_neighbors.Rd
prechi/src/: Makefile.am  config.h  config.h.in  partition.c  partition.h  prechi.c  prechi.h  prechi_partition.c  prechi_partition.h  r-prechi.c  r_prechi.c  symbols.rds
prechi/test/: .gitignore  Makefile.am  array_init.c  configure.ac  run_test.sh  test_data.c  test_data.h  test_helper.h  test_partition.c  test_partition.h  test_partition_access.c  test_partition_create.c  test_partition_join.c  test_partition_mean.c  test_partition_minimum.c  test_partition_sort.c  test_prechi.c  test_prechi.h  test_prechi_collapse_zero.c  test_prechi_no_solution.c  test_prechi_solve.c
prechi/test/testthat/: testPreChi.R
prechi/tests/: testthat.R
